# friendly-errors

./: .gitignore  Cargo.toml  LICENSE  README.md  spec.md
src/: description.rs  doc_url.rs  file_url.rs  header.rs  lib.rs  print_snippets.rs  summary.rs
src/code_snippet/: mod.rs
