[package]
name = "friendly-errors"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Create developer-friendly error messages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"

[dev-dependencies]
indoc = "1"
